sort wells + remove obsolete client method